Fix scrollbars on smaller screens

--- a/composites/OnboardingWizard/onboarding-wizard.scss
+++ b/composites/OnboardingWizard/onboarding-wizard.scss
@@ -142,6 +142,7 @@ body {
   &--stepper {
     width: 100%;
     margin: auto;
+    overflow: hidden;
   }
 
   &-overlay {
